--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +19,9 @@
   "homepage": "https://github.com/Laning74/eksamen-webteknologi-recipes#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "sqlite3": "^5.1.2"
   }
 }
